--- a/sample/SampleConsoleApp/SampleConsoleApp.csproj
+++ b/sample/SampleConsoleApp/SampleConsoleApp.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.24" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\OpenAPIClientGenerator.Attributes\OpenAPIClientGenerator.Attributes.csproj" />
     <ProjectReference Include="..\..\src\OpenAPIClientGenerator\OpenAPIClientGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
   </ItemGroup>
