--- a/src/OpenAPIClientGenerator/OpenAPIClientGenerator.csproj
+++ b/src/OpenAPIClientGenerator/OpenAPIClientGenerator.csproj
@@ -20,6 +20,8 @@
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.24" GeneratePathProperty="true" PrivateAssets="all" />
     <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.24" GeneratePathProperty="true" PrivateAssets="all" />
     <PackageReference Include="SharpYaml" Version="2.1.1" GeneratePathProperty="true" PrivateAssets="all" />
+    <PackageReference Include="System.Net.Http.Json" Version="9.0.8" />
+    <PackageReference Include="System.Text.Json" Version="9.0.8" />
   </ItemGroup>
 
 
